--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 env:
-  IMAGE_NAME: magicmonti/weather_server
+  IMAGE_NAME: magicmonti/weather_server_dev
 
 jobs:
   build-and-push:
@@ -21,7 +21,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: docker.io
-          username: ${{ secrets.magicmonti }}
+          username: ${{ vars.magicmonti }}
           password: ${{ secrets.dckr_pat_kIN56_kkMbGsfXX3y4Ka3-q2_y8 }}
           logout : false
 
@@ -45,8 +45,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ env.weather_server_image }}:${{ steps.tags.outputs.sha }}
-            ${{ env.weather_server_image }}:${{ steps.tags.outputs.tag }}
+            ${{ env.weather_server_dev }}:${{ steps.tags.outputs.sha }}
+            ${{ env.weather_server_dev }}:${{ steps.tags.outputs.tag }}
 
       # Optional: if you rely on docker-compose to build multiple services, uncomment:
       # - name: Build and push via docker-compose
