--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: docker.io
-          username: ${{ magicmonti }}
-          password: ${{ dckr_pat_kIN56_kkMbGsfXX3y4Ka3-q2_y8 }}
+          username: ${{ vars.magicmonti }}
+          password: ${{ secrets.dckr_pat_2e95PwWzjOB85Q3eqPRxeYSmRkEs }}
           logout : false
 
       - name: Determine tags
