--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,9 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v1
         with:
-          username: ${{ vars.magicmonti }}
+          username: ${{ secrets.magicmonti }}
           password: ${{ secrets.dckr_pat_2e95PwWzjOB85Q3eqPRxeYSmRkE }}
           logout : false
 
