--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,11 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.magicmonti }}
-          password: ${{ secrets.dckr_pat_2e95PwWzjOB85Q3eqPRxeYSmRkE }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.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 }}
           logout : false
 
       - name: Build and push Docker image
