--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Log in to github
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.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 }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           logout : false
 
       - name: Build and push Docker image
