--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t magicmonti/weather_server_dev .
+          docker build -t ghcr.io/magicmonti/weather_server_dev .
           docker push ghcr.io/magicmonti/weather_server_dev:latest
